<resources>
    <string name="app_name">ToDoApp</string>
    <string name="todo_app">Post It</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="note">Note</string>
    <string name="settings">Settings</string>
    <string name="title">Title</string>
    <string name="write_something_here">Write something here</string>
    <string name="logout">logout</string>
    <string name="note_text">Note text</string>
    <string name="note_title">Note Title</string>
    <string name="notes">Notes</string>
    <string name="create">Create</string>
    <string name="create_account">Create account</string>
    <string name="email">Email</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="confirm">Confirm</string>
    <string name="text">Text…</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="button">Button</string>
    <string name="date">2023–03–21</string>
    <string name="time">16:00</string>
    <string name="add">Add</string>
    <string name="notification">notification</string>
</resources>