<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="15dp"
    android:background="@color/white"
    android:layout_marginVertical="10dp"
    android:layout_marginHorizontal="5dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="5dp"
        android:padding="8dp">

        <TextView
            android:id="@+id/cardTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:maxLines="1"
            android:text="@string/note"
            android:textColor="@color/black"
            android:textSize="15sp"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/cardDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:ellipsize="end"
            android:maxLength="20"
            android:text="@string/note_text"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_below="@+id/cardTitle"/>

        <TextView
            android:id="@+id/dateAdded"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:textSize="15sp"
            android:text="@string/date"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/timeAdded"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/dateAdded"
            android:textSize="15sp"
            android:text="@string/time" />

    </RelativeLayout>



</androidx.cardview.widget.CardView>