<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_gradient"
        tools:context=".presentation.note.CreateFragment">

        <EditText
            android:id="@+id/inputTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_margin="10dp"
            android:padding="7dp"
            android:hint="@string/title"
            android:maxLength="30"
            android:maxLines="1"
            android:autofillHints="Android"
            android:inputType="text" />

        <EditText
            android:id="@+id/edText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:layout_above="@id/btnUpdate"
            android:layout_below="@+id/inputTitle"
            android:layout_margin="10dp"
            android:padding="7dp"
            android:gravity="start|top"
            android:hint="@string/note_text"
            android:inputType="textMultiLine"
            android:singleLine="false"
            android:autofillHints="Today I'm going to..." />

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            style="@style/CustomButton"
            android:layout_margin="20dp"
            android:text="@string/button" />
    </RelativeLayout>


</layout>