<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    tools:context=".presentation.create.CreateUserActivity">

    <TextView
        android:id="@+id/createUserTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/username"
        android:layout_width="242dp"
        android:layout_height="48dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/login_edit_background"
        android:drawableStart="@drawable/icon_user"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="Enter email"
        android:inputType="text"
        android:minHeight="48dp"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createUserTitle" />

    <EditText
        android:id="@+id/password"
        android:layout_width="242dp"
        android:layout_height="48dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/login_edit_background"
        android:drawableStart="@drawable/icon_password"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/password2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <EditText
        android:id="@+id/password2"
        android:layout_width="242dp"
        android:layout_height="48dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/login_edit_background"
        android:drawableStart="@drawable/icon_password"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/createBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <Button
        android:id="@+id/createBtn"
        android:layout_width="155dp"
        android:layout_height="65dp"
        android:layout_marginBottom="70dp"
        android:backgroundTint="#3F51B5"
        android:text="@string/create"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/cancelBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password2" />

    <Button
        android:id="@+id/cancelBtn"
        android:layout_width="125dp"
        android:layout_height="65dp"
        android:layout_marginBottom="70dp"
        android:backgroundTint="#030B31"
        android:text="@string/cancel"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>